--- a/src/styles/VocabularyTab.css
+++ b/src/styles/VocabularyTab.css
@@ -159,7 +159,7 @@
   max-height: calc(100vh - 240px);
   overflow-y: auto;
   padding-bottom: 15px;
-  margin-top: 25px;
+  margin-top: 40px;
 }
 
 /* Interactive Word Card */
